objects/Other_Sales_Document_Total__c.object
<CustomObject>
    <description>Subtotals, taxes, discounts, etc. for Other Sales Documents.</description>
    <fields>
        <fullName>Absolute_Value__c</fullName>
        <label>Absolute Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Sales_Document__c</fullName>
        <label>Other Sales Document</label>
        <referenceTo>Other_Sales_Document__c</referenceTo>
        <relationshipName>R00N40000001bdkiEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percent_Value__c</fullName>
        <label>Percent Value</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Other Sales Document Total</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Sales Document Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>